--- a/app/scss/abstracts/_color-mix.scss
+++ b/app/scss/abstracts/_color-mix.scss
@@ -18,3 +18,9 @@ $black-orange: #be5d23;
   --btn-color: hsla(12, 54%, 26%, 1);
   --bg-color: #141218;
 }
+
+//GRID
+
+$grid-width: 144rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 2rem;
