--- a/app/scss/abstracts/_mixins.scss
+++ b/app/scss/abstracts/_mixins.scss
@@ -1,11 +1,7 @@
-@mixin card-style {
-  border-radius: 15px 15px 15px 15px;
-  box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.56);
-  text-align: center;
-}
-
-@mixin element-centre {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+@mixin clearfix {
+  &::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
