--- a/app/scss/abstracts/_color-mix.scss
+++ b/app/scss/abstracts/_color-mix.scss
@@ -4,6 +4,8 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+$color-grey-light-1: #f7f7f7;
+
 $color-black: #000;
 
 $color-ico: #faddc2;
@@ -23,4 +25,7 @@ $black-orange: #be5d23;
 
 $grid-width: 144rem;
 $gutter-vertical: 8rem;
-$gutter-horizontal: 2rem;
+$gutter-horizontal: 4rem;
+
+// FONT
+$defaut-font-size: 1.6rem;
