--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -1,4 +1,3 @@
-
 .header {
   height: 95vh;
   background-image: linear-gradient(
@@ -11,6 +10,7 @@
   background-position: top;
   position: relative;
 
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
   &__logo-box {
